Se comentarion los botones de aceptar y cancelar editar un cooperador

--- a/Admin/procesos/gCoops.html
+++ b/Admin/procesos/gCoops.html
@@ -583,9 +583,9 @@
              </tbody>
          </table>
 
-         <div class="botonesA" id="botonesA">
+         <!-- div class="botonesA" id="botonesA">
              <p style="text-align:right"><a href="#" class="posicion_boton_accion_coop">Aceptar</a>&nbsp&nbsp&nbsp<a href="#" class="posicion_boton_cancelar_coop">Cancelar</a></p>
-         </div>
+         </div -->
 
      </div>
      <div id="eliminar_frente" class="window"> 
