--- a/Admin/procesos/coopsCalidad.html
+++ b/Admin/procesos/coopsCalidad.html
@@ -19,6 +19,7 @@
 
     <script src="https://paulkinzett.github.io/toolbar/js/jquery.toolbar.min.js"></script>
     <script src="../../proj4js_250/dist/proj4.js"></script>
+    <script src="../../Global/config.js"></script>
      
 
     <style>
@@ -1596,7 +1597,7 @@
             }
 
             function RecargaCapaFrentes() {
-                var url = 'http://localhost:8080/geoserver/sigFidoc/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=sigFidoc%3Afrentes&maxFeatures=50&outputFormat=application%2Fjson&CQL_FILTER=gid=' + parametro.toString();
+                var url = geoserverConfig.host + '/geoserver/sigFidoc/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=sigFidoc%3Afrentes&maxFeatures=50&outputFormat=application%2Fjson&CQL_FILTER=gid=' + parametro.toString();
 
                 return $.ajax({
                     url: url,
