Se crearon WS para obtener pagos de as400

--- a/Admin/procesos/coopsCalidad.html
+++ b/Admin/procesos/coopsCalidad.html
@@ -1895,6 +1895,7 @@
 
 
             function InsertarCoop(idcoop, apaterno, amaterno, nombres, callecoop, colcoop, nooficialext, nooficialint, telcoop, nomficha, estado, pais, domcoop, email, sifidoc, usuario, hoy, usuario, hoy, curp, relpred, secfno, sscfno, cvecalle, accion) { /*Inserta los registros de los documentos en la tabla de mDocumento*/
+                //TODO:
                 var enviarObj = {
                     "idcoop": idcoop,
                     "apellidoP": apaterno,
