se agrego el WS de agregar obra en Access y SQL Server

--- a/Admin/procesos/salida_predio.html
+++ b/Admin/procesos/salida_predio.html
@@ -88,11 +88,9 @@
    <link type="text/css" rel="stylesheet" href="../css/cupertino/jquery-ui-1.7.2.custom.css" />
    <link type="text/css" rel="stylesheet" href="../css/cupertino/ui.jqgrid.css" />
    <link rel="stylesheet" href="../js/ol/v6.3.1/css/ol.css" type="text/css"/>
-   <script src="../../Global/config.js"></script>
-   
+   <script src="../../Global/config.js"></script>   
     
-    
-    <script>
+    <script type="text/javascript">
         function recuperarParametro(campo) {
             var RE = new RegExp("[&?]" + campo + "=([^&]*)&");
             var href = location.href + "&";
